# translationCheckerRender

./: .gitignore  manage.py  pyproject.toml  render.yaml  requirements.txt  test_urls.ini  vercel.json
app0/: forms.py  urls.py  views.py
app0/templates/: index.html  scan.html
translationChecker/: asgi.py  settings.py  urls.py  wsgi.py
